# rocket-graphql

./: .envrc  Cargo.toml  README.md
migrations/2017-11-25-010100_users/: up.sql
src/: db.rs  main.rs
src/models/: mod.rs  schema.rs  user.rs
