[package]
name = "hello-rocket"
version = "0.1.0"
authors = ["Sebastian Porto <s@porto5.com>"]

[dependencies]
diesel = { version = "0.16.0", features = ["postgres"] }
diesel_codegen = { version = "0.16.0", features = ["postgres"] }
juniper = { git = "https://github.com/graphql-rust/juniper" }
juniper_rocket = { git = "https://github.com/graphql-rust/juniper_rocket" }
r2d2 = "0.7.4"
r2d2-diesel = "0.16.0"
rocket = "0.3.3"
rocket_codegen = "0.3.3"
rocket_contrib = "0.3.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"